--- a/server/package.json
+++ b/server/package.json
@@ -2,25 +2,24 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "env-cmd -f .environments/.env.dev nodemon npm run start server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cuid": "^2.1.8",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
-    "limax": "^3.0.0",
-    "mongoose": "^6.0.11",
-    "sanitize-html": "^2.5.2",
-    "validation": "^0.0.1"
+    "mongoose": "^6.0.12",
+    "nodemon": "^2.0.14"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "bcrypt": "^5.0.1",
+    "config": "^3.3.6"
   }
 }
