Add basic auth/authorization with help jwt/setting up different configs * Add basic validation for auth; * Add role model; * Fix post/user models

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -32,6 +32,5 @@ lerna-debug.log*
 .env.production.local
 
 # Config
-
-/config/prod.json
-/config/dev.json
+/.environments/.env.prod
+/.environments/.env.dev
