--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mui/material": "^5.0.6",
-    "@mui/styled-engine-sc": "^5.0.4",
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
     "prettier": "^2.4.1",
@@ -15,8 +13,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.0",
-    "styled-components": "^5.3.3"
+    "redux-thunk": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
